# STN

./: .gitignore  pyproject.toml
core/: README-ja.md  pyproject.toml
core/src/stn_core/: __init__.py  document.py  evaluator.py  locator.py  projector.py  reader.py  values.py
core/tests/: test_document_get.py  test_loader.py  test_locator.py  test_projection.py
facade/: pyproject.toml
lexer/: README-ja.md  README.md  pyproject.toml  spec.md
lexer/stn/: __init__.py  data.py  errors.py  nodes.py  parser.py  tokenizer.py
lexer/tests/: test_data.py  test_integration.py  test_parser.py  test_tokenizer.py
