[project]
name = "stn-facade"
version = "0.1.0"
description = "STN Facade — injection and template DSL built on STN Core"
requires-python = ">=3.11"
dependencies = [
    "stn-core",
]

[tool.uv.sources]
stn-core = { workspace = true }

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
